Vasilich initial commit Basic functionality available. Ping and Current time commands Test suite created Heh. Let's move!

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
-*.class
+target
+.idea
 
-# Package Files #
-*.jar
-*.war
-*.ear
+#this file should not be in repository.
+src/main/resources/config.json
+
+target/
+logs/
+annotations/
+.idea
+
+*.iml
+*.tmp
+
