--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
-            <version>4.0.0.BUILD-SNAPSHOT</version>
+            <version>3.2.4.RELEASE</version>
             <scope>test</scope>
             <exclusions>
                 <exclusion>
