Explicit enabled property can be optional Because if we have a configuration node for plugin we can assume, that it's enabled until

--- a/src/main/resources/config-example.json
+++ b/src/main/resources/config-example.json
@@ -12,11 +12,10 @@
 	},
 
 	"ping": {
-		"enabled": false
+		"aliases": ["ping"]
 	},
 
 	"currenttime": {
-		"enabled": true,
 		"aliases": ["который час", "time", "what time", "серверное время"],
 		"output": "Время: {0}"
 	}
