getConfigName function to make config file more readable :)

--- a/src/main/resources/config-example.json
+++ b/src/main/resources/config-example.json
@@ -15,7 +15,7 @@
 		"aliases": ["ping"]
 	},
 
-	"currenttime": {
+	"date-time": {
 		"aliases": ["который час", "time", "what time", "серверное время"],
 		"output": "Время: {0}"
 	}
