--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,6 @@ before_script:
   - echo " StrictHostKeyChecking no" >> ~/.ssh/config
   - echo " CheckHostIP no" >> ~/.ssh/config
   - echo " IdentityFile $ID_FILE" >> ~/.ssh/config
-  - git config --global push.default simple
   - git clone git@github.com:WonderBeat/mvn-repo.git
 
 script: mvn deploy
@@ -25,6 +24,9 @@ after_success:
 # decrypt -> openssl aes-256-cbc -k "pwd" -in deploy_key.enc -d -a -out id_rsa
     - cd mvn-repo
     - git add *
+    - git config --global user.email "WonderBeat@github.com"
+    - git config --global user.name "WonderBeat"
+    - git config --global push.default simple
     - git commit -m "A new shinny snapshot"
     - git push
 
