--- a/pom.xml
+++ b/pom.xml
@@ -275,9 +275,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.1</version>
                 <executions>
                     <execution>
+                        <phase>
+                            package
+                        </phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
