--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>0.6.800</kotlin.version>
+        <kotlin.version>0.6.786</kotlin.version>
         <junit.version>4.11</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -151,7 +151,17 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.scijava</groupId>
+            <artifactId>native-lib-loader</artifactId>
+            <version>2.0.0</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.fusesource</groupId>
+            <artifactId>sigar</artifactId>
+            <version>1.6.4</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -264,6 +274,16 @@
             </snapshots>
             <url>http://repo.springsource.org/libs-snapshot</url>
         </repository>
+        <!-- In Project repository -->
+        <repository>
+            <id>in-project</id>
+            <name>In Project Repo</name>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+            <url>file://${project.basedir}/libs</url>
+        </repository>
+
     </repositories>
 
 </project>
