--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ env:
   - secure: "RwQ1Fxe/O4PxdvsJjiPFoAUuX/pqNLAxAr5dBCK7cx+DpXtnYMAk2MRgdr2ih03B+tU55LzZKi1BCzALlt9v/77FpO4foz2c5/WPlK9my7Xic+U+1aoiG9FEFR9loLu/3S/mNfEXc/nwgu/dtttwYb2enApri65PUMaIoui3SLQ="
 
 before_script:
-  - openssl aes-256-cbc -k $PASSWORD -in deploy_key.enc -d -a -out id_rsa
-  - chmod 600 id_rsa
-  - ID_FILE=$(pwd)/id_rsa
-  - echo "Host github.com" >> ~/.ssh/config
-  - echo " StrictHostKeyChecking no" >> ~/.ssh/config
-  - echo " CheckHostIP no" >> ~/.ssh/config
-  - echo " IdentityFile $ID_FILE" >> ~/.ssh/config
+ # - openssl aes-256-cbc -k $PASSWORD -in deploy_key.enc -d -a -out id_rsa
+ #- chmod 600 id_rsa
+ # - ID_FILE=$(pwd)/id_rsa
+ # - echo "Host github.com" >> ~/.ssh/config
+#  - echo " StrictHostKeyChecking no" >> ~/.ssh/config
+ # - echo " CheckHostIP no" >> ~/.ssh/config
+#  - echo " IdentityFile $ID_FILE" >> ~/.ssh/config
   - git clone git@github.com:WonderBeat/mvn-repo.git
 
 script: mvn deploy
@@ -27,6 +27,6 @@ after_success:
     - git config --global user.email "WonderBeat@github.com"
     - git config --global user.name "WonderBeat"
     - git config --global push.default simple
-    - git commit -m "A new shinny snapshot"
-    - git push
+  #  - git commit -m "A new shinny snapshot"
+  #  - git push
 
