--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ env:
     secure: "RwQ1Fxe/O4PxdvsJjiPFoAUuX/pqNLAxAr5dBCK7cx+DpXtnYMAk2MRgdr2ih03B+tU55LzZKi1BCzALlt9v/77FpO4foz2c5/WPlK9my7Xic+U+1aoiG9FEFR9loLu/3S/mNfEXc/nwgu/dtttwYb2enApri65PUMaIoui3SLQ="
 
 before_script:
+  - echo "Host github.com" >> ~/.ssh/config
+  - echo " StrictHostKeyChecking no" >> ~/.ssh/config
+  - echo " CheckHostIP no" >> ~/.ssh/config
+  - echo " IdentityFile $ID_FILE" >> ~/.ssh/config
   - git clone git@github.com:WonderBeat/mvn-repo.git
 
 script: mvn deploy
