Simple Disk Usage statistics command. Config sample

--- a/src/main/resources/config-example.json
+++ b/src/main/resources/config-example.json
@@ -18,5 +18,9 @@
 	"date-time": {
 		"aliases": ["который час", "time", "what time", "серверное время"],
 		"output": "Время: {0}"
-	}
+	},
+
+    "disk-usage": {
+        "aliases": ["disk"]
+    }
 }
