Single monitoring command, added test for monitoring command

--- a/src/main/resources/config-example.json
+++ b/src/main/resources/config-example.json
@@ -53,11 +53,7 @@
     "chatbot": {
     },
 
-    "disk-usage": {
-        "aliases": ["disk"]
-    },
-
-    "cpu-usage": {
-        "aliases": ["cpu"]
+    "system-monitoring": {
+        "aliases" : ["mon"]
     }
 }
