--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
+                            <finalName>vasilich</finalName>
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
