Delayed command has been added. Now users can run postponed commands to Vasilich like "Vasilich, delay 5 sec, mon disk"

--- a/src/main/resources/config-example.json
+++ b/src/main/resources/config-example.json
@@ -55,5 +55,13 @@
 
     "system-monitoring": {
         "aliases" : ["mon"]
+    },
+
+    "delayed": {
+        "aliases" : ["delay"],
+        "enabled"  : false,
+        "initialDelay" : 5,
+        "delay" : 5,
+        "timeUnit" : "SECONDS"
     }
 }
