--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>0.5-SNAPSHOT</version>
 
     <properties>
-        <kotlin.version>0.6.786</kotlin.version>
+        <kotlin.version>0.6.1910</kotlin.version>
         <junit.version>4.11</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -236,7 +236,7 @@
                     <execution>
                         <goals>
                             <goal>compile</goal>
-                            <goal>generateTestStubs</goal>
+                        <!--    <goal>generateTestStubs</goal> -->
                             <goal>testCompile</goal>
                         </goals>
                     </execution>
